# inqwise-mcp-site2ts

./: .gitignore  LICENSE  PROGRESS.md  README.md  SITE2TS_MISSION_SPEC.md  architecture_draft.md  chat_context_summary.md  progress.json  warp.md
.github/workflows/: node.yml  rust.yml
docs/: API_EXAMPLES.md  README.md  RUNBOOK.md
node/site2ts-worker/: .eslintrc.cjs  eslint.config.js  package-lock.json  package.json  tsconfig.json
node/site2ts-worker/src/: ambient.d.ts  analyze.ts  apply.ts  assets.ts  audit.ts  crawl.ts  diff.ts  generate.ts  improve.ts  index.ts  init.ts  pack.ts  scaffold.ts  utils.ts
rust/site2ts-server/: Cargo.toml
rust/site2ts-server/src/: main.rs  worker.rs
schemas/: analyze.request.v1.json  analyze.response.v1.json  apply.request.v1.json  apply.response.v1.json  assets.request.v1.json  assets.response.v1.json  audit.request.v1.json  audit.response.v1.json  common.v1.json  crawl.request.v1.json  crawl.response.v1.json  diff.request.v1.json  diff.response.v1.json  generate.request.v1.json  generate.response.v1.json  init.request.v1.json  init.response.v1.json  pack.request.v1.json  pack.response.v1.json  scaffold.request.v1.json  scaffold.response.v1.json
schemas/examples/: crawl.request.sample.json  diff.response.sample.json
tools/: full_flow.sh  rpc.sh
