[package]
name = "site2ts-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
ulid = "1"
thiserror = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
scraper = "0.19"
chrono = { version = "0.4", features = ["clock"] }
once_cell = "1.19"
