[package]
name = "site2ts-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
ulid = "1.2.1"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
chrono = { version = "0.4.42", features = ["clock"] }
once_cell = "1.21.3"
